# Autotune

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  metadata.json
example-apps/file-explorer/: Cargo.toml  metadata.json
example-apps/file-explorer/api/: file-explorer-sys-v0.wit  file-explorer.wit  types-file-explorer-sys-v0.wit
example-apps/file-explorer/explorer/: Cargo.toml
example-apps/file-explorer/explorer/src/: icon  lib.rs
example-apps/file-explorer/pkg/: manifest.json
example-apps/file-explorer/ui/: index.html  package-lock.json  package.json
example-apps/file-explorer/ui/src/: App.css  App.tsx  index.css
example-apps/file-explorer/ui/src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
example-apps/file-explorer/ui/src/components/FileExplorer/: Breadcrumb.css  Breadcrumb.tsx  FileExplorer.css  FileExplorer.tsx  FileItem.css  FileItem.tsx  FileList.css  FileList.tsx  Toolbar.css  Toolbar.tsx
example-apps/file-explorer/ui/src/components/ShareDialog/: ShareDialog.css  ShareDialog.tsx
example-apps/file-explorer/ui/src/components/Upload/: UploadZone.css  UploadZone.tsx
example-apps/file-explorer/ui/src/contexts/: ThemeContext.tsx
example-apps/file-explorer/ui/src/lib/: api.ts
example-apps/file-explorer/ui/src/store/: fileExplorer.ts
example-apps/file-explorer/ui/src/types/: api.ts
example-apps/id/: Cargo.toml  README.md  metadata.json
example-apps/id/id/: Cargo.toml
example-apps/id/id/src/: lib.rs
example-apps/id/pkg/: manifest.json
example-apps/id/ui/: index.html  package-lock.json
example-apps/id/ui/src/: App.css  App.tsx
example-apps/id/ui/src/store/: id.ts
example-apps/id/ui/src/types/: Id.ts
example-apps/sign/: Cargo.toml  README.md  metadata.json
example-apps/sign/pkg/: manifest.json
example-apps/sign/sign/: Cargo.toml
example-apps/sign/sign/src/: lib.rs
jendrix-tune/: Cargo.toml
jendrix-tune/src/: icon  lib.rs
pkg/: manifest.json
test/: tests.toml
test/jendrix-tune-test/: Cargo.toml  metadata.json
test/jendrix-tune-test/api/: hyperapp_skeleton_test:template.os-v0.wit
test/jendrix-tune-test/jendrix-tune-test/: Cargo.toml
test/jendrix-tune-test/jendrix-tune-test/src/: lib.rs
test/jendrix-tune-test/pkg/: manifest.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css  main.tsx
ui/src/audio/: AudioEngine.ts  MusicTheory.ts  PitchDetector.ts
ui/src/components/: CircularPitchMeter.css  CircularPitchMeter.tsx  PianoKeyboard.css  PianoKeyboard.tsx  RotaryKnob.css  RotaryKnob.tsx
ui/src/store/: jendrix_tune.ts
ui/src/types/: global.ts  jendrix_tune.ts
