[package]
name = "jendrix-tune-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bincode = "1.3"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "e8b065179ce5d15893a23142416e59c87e0f31f6" }
process_macros = { git = "https://github.com/hyperware-ai/process_macros", rev = "626e501" }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wit-bindgen = "0.42.1"
jendrix_tune_caller_utils = { path = "../../../target/jendrix-tune-caller-utils" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
